<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/dialogEventTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_event_hint_title"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_time"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventCategoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_category"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventLocationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_location"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventCapacityTotalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_capacity_total"
        android:inputType="number"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventCapacityRemainingInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_capacity_remaining"
        android:inputType="number"
        android:maxLines="1" />
</LinearLayout>
