appId: com.soen345.project
---
- launchApp
- waitForAnimationToEnd

- runFlow:
    file: login.yml
    env:
      email: "admin@example.com"
      password: "password123"

- waitForAnimationToEnd
- assertVisible: "Event Management"

- tapOn:
    id: "homeAddEventButton"
- assertVisible: "Add New Event"

- tapOn:
    id: "dialogEventTitleInput"
- inputText: "Maestro Test Event"

- tapOn:
    id: "dialogEventCategoryInput"
- inputText: "Testing"

- tapOn:
    id: "dialogEventLocationInput"
- inputText: "Automated Lab"

- tapOn:
    id: "dialogEventTimeInput"
- inputText: "2025-12-25 18:00"

- tapOn:
    id: "dialogEventCapacityTotalInput"
- inputText: "100"

- tapOn: "Add New Event"

- waitForAnimationToEnd
- assertVisible: "Maestro Test Event"

- tapOn:
    id: "eventItemEditButton"
- assertVisible: "Edit Event"

- tapOn:
    id: "dialogEventTitleInput"

- inputText: "Maestro Test Event Edited"

- tapOn:
    id: "dialogEventLocationInput"
- inputText: "New Lab Room"

- tapOn: "Save Changes"
- waitForAnimationToEnd
- assertVisible: "Maestro Test Event Edited"

- tapOn: "Cancel Event"
- assertVisible: "Cancel \"Maestro Test Event Edited\"?"
- tapOn: "Cancel Event"

- assertVisible: "Cancelled"
